pod-security-114/baseline/restrict-sysctls/e2e/enforce-policy-assert.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: restrict-sysctls
spec:
  validationActions: [Deny]
status:
  conditionStatus:
    ready: true
